--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=8080
-spring.data.mongodb.host=host.docker.internal
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=FillableDB
+# spring.data.mongodb.host=host.docker.internal
+# spring.data.mongodb.port=27017
+#spring.data.mongodb.database=FillableDB
